--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -1,6 +1,11 @@
 name: Terraform
 on:
   workflow_dispatch:
+    inputs:
+      action:
+        description: "Select your choice"
+        required: true
+
 
 jobs:
   deploy:
